<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.taqtile.myfirstapp.activities.CreateUserActivity">

    <TextView
        android:id="@+id/activity_create_user_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_field"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_email_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_create_user_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_create_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_create_user_name_field"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_email"
        app:layout_constraintLeft_toRightOf="@+id/activity_create_user_name_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_create_user_email_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/email_field"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_type_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_create_user_email"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_name_field" />

    <EditText
        android:id="@+id/activity_create_user_email"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_create_user_email_field"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_type"
        app:layout_constraintLeft_toRightOf="@+id/activity_create_user_email_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_name" />

    <TextView
        android:id="@+id/activity_create_user_type_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/type_field"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_password_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_create_user_type"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_email_field" />

    <EditText
        android:id="@+id/activity_create_user_type"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_create_user_type_field"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_password"
        app:layout_constraintLeft_toRightOf="@+id/activity_create_user_type_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_email" />

    <TextView
        android:id="@+id/activity_create_user_password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/password_field"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_confirm_password_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_create_user_password"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_type_field" />

    <EditText
        android:id="@+id/activity_create_user_password"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_create_user_password_field"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_confirm_password"
        app:layout_constraintLeft_toRightOf="@+id/activity_create_user_password_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_type" />

    <TextView
        android:id="@+id/activity_create_user_confirm_password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/confirm_password_field"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_save_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_create_user_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_password" />

    <EditText
        android:id="@+id/activity_create_user_confirm_password"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_create_user_confirm_password_field"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_save_button"
        app:layout_constraintLeft_toRightOf="@+id/activity_create_user_confirm_password_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_password" />

    <Button
        android:id="@+id/activity_create_user_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:text="@string/create_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_confirm_password_field" />

</android.support.constraint.ConstraintLayout>
