<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.taqtile.myfirstapp.activities.EditUserActivity">

    <TextView
        android:id="@+id/activity_edit_user_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/name_field"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_edit_user_email_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_edit_user_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_edit_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_edit_user_name_field"
        app:layout_constraintBottom_toTopOf="@+id/activity_edit_user_email"
        app:layout_constraintLeft_toRightOf="@+id/activity_edit_user_name_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_edit_user_email_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:text="@string/email_field"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_edit_user_save_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_edit_user_email"
        app:layout_constraintTop_toBottomOf="@+id/activity_edit_user_name_field" />

    <EditText
        android:id="@+id/activity_edit_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_edit_user_email_field"
        app:layout_constraintBottom_toTopOf="@+id/activity_edit_user_save_button"
        app:layout_constraintLeft_toRightOf="@+id/activity_edit_user_email_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_edit_user_name" />

    <Button
        android:id="@+id/activity_edit_user_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginBottom="250dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_edit_user_email" />

</android.support.constraint.ConstraintLayout>
